# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-01-21 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-04-25 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_survey"
  WHERE (NOT "markettor_survey"."archived"
         AND "markettor_survey"."end_date" IS NULL
         AND "markettor_survey"."start_date" IS NOT NULL
         AND "markettor_survey"."team_id" = 2
         AND NOT ("markettor_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.1
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.2
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.3
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.4
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_survey"
  WHERE (NOT "markettor_survey"."archived"
         AND "markettor_survey"."end_date" IS NULL
         AND "markettor_survey"."start_date" IS NOT NULL
         AND "markettor_survey"."team_id" = 2
         AND NOT ("markettor_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.5
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.6
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.7
  '''
  SELECT "markettor_survey"."id",
         "markettor_survey"."team_id",
         "markettor_survey"."name",
         "markettor_survey"."description",
         "markettor_survey"."linked_flag_id",
         "markettor_survey"."targeting_flag_id",
         "markettor_survey"."internal_targeting_flag_id",
         "markettor_survey"."type",
         "markettor_survey"."conditions",
         "markettor_survey"."questions",
         "markettor_survey"."appearance",
         "markettor_survey"."created_at",
         "markettor_survey"."created_by_id",
         "markettor_survey"."start_date",
         "markettor_survey"."end_date",
         "markettor_survey"."updated_at",
         "markettor_survey"."archived",
         "markettor_survey"."responses_limit",
         "markettor_survey"."iteration_count",
         "markettor_survey"."iteration_frequency_days",
         "markettor_survey"."iteration_start_dates",
         "markettor_survey"."current_iteration",
         "markettor_survey"."current_iteration_start_date",
         "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics",
         T4."id",
         T4."key",
         T4."name",
         T4."filters",
         T4."rollout_percentage",
         T4."team_id",
         T4."created_by_id",
         T4."created_at",
         T4."deleted",
         T4."active",
         T4."rollback_conditions",
         T4."performed_rollback",
         T4."ensure_experience_continuity",
         T4."usage_dashboard_id",
         T4."has_enriched_analytics",
         T5."id",
         T5."key",
         T5."name",
         T5."filters",
         T5."rollout_percentage",
         T5."team_id",
         T5."created_by_id",
         T5."created_at",
         T5."deleted",
         T5."active",
         T5."rollback_conditions",
         T5."performed_rollback",
         T5."ensure_experience_continuity",
         T5."usage_dashboard_id",
         T5."has_enriched_analytics"
  FROM "markettor_survey"
  LEFT OUTER JOIN "markettor_featureflag" ON ("markettor_survey"."linked_flag_id" = "markettor_featureflag"."id")
  LEFT OUTER JOIN "markettor_featureflag" T4 ON ("markettor_survey"."targeting_flag_id" = T4."id")
  LEFT OUTER JOIN "markettor_featureflag" T5 ON ("markettor_survey"."internal_targeting_flag_id" = T5."id")
  WHERE ("markettor_survey"."team_id" = 2
         AND NOT ("markettor_survey"."archived"))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.8
  '''
  SELECT ("markettor_survey_actions"."survey_id") AS "_prefetch_related_val_survey_id",
         "markettor_action"."id",
         "markettor_action"."name",
         "markettor_action"."team_id",
         "markettor_action"."description",
         "markettor_action"."created_at",
         "markettor_action"."created_by_id",
         "markettor_action"."deleted",
         "markettor_action"."post_to_slack",
         "markettor_action"."slack_message_format",
         "markettor_action"."updated_at",
         "markettor_action"."bytecode",
         "markettor_action"."bytecode_error",
         "markettor_action"."steps_json",
         "markettor_action"."pinned_at",
         "markettor_action"."is_calculating",
         "markettor_action"."last_calculated_at"
  FROM "markettor_action"
  INNER JOIN "markettor_survey_actions" ON ("markettor_action"."id" = "markettor_survey_actions"."action_id")
  WHERE 'markettor_survey_actions'.'survey_id' IN ('00000000-0000-0000-0000-000000000000'::uuid,
                                                 '00000000-0000-0000-0000-000000000001'::uuid)
  '''
# ---
